fix event service
