# backend-go/internal/core/domain/entity/event.go
@@ -6,12 +6,12 @@ import (
 )
 
 type Event struct {
-	Id              primitive.ObjectID `bson:"_id,omitempty"`
+	Id              primitive.ObjectID `json:"id,omitempty" bson:"_id,omitempty"`
 	Name            string             `bson:"name" validate:"required"`
-	Description     string             `bson:"description"`
-	Status          string             `bson:"status"`
-	EventOptions    []interface{}      `bson:"event_options" validate:"required"`
-	OwnerUser       User               `bson:"owner_user"`
-	RegisteredUsers []interface{}      `bson:"registered_users"`
-	CreateDate      time.Time          `bson:"create_date"`
+	Description     string             `json:"description,omitempty" bson:"description,omitempty"`
+	Status          string             `json:"status,omitempty" bson:"status,omitempty"`
+	EventOptions    []EventOption      `bson:"event_options,omitempty" validate:"required"`
+	OwnerUser       User               `json:"owner_user,omitempty" bson:"owner_user,omitempty"`
+	RegisteredUsers []User             `json:"registered_users,omitempty" bson:"registered_users,omitempty"`
+	CreateDate      time.Time          `json:"create_date,omitempty" bson:"create_date,omitempty"`
 }
