# backend-go/internal/router/router.go
@@ -2,6 +2,7 @@ package router
 
 import (
 	"backend-go/internal/config"
+	"backend-go/internal/core/middleware"
 	"backend-go/internal/core/middleware/rate_limiter"
 	"github.com/gin-gonic/gin"
 )
@@ -17,6 +18,10 @@ func Init(init *config.Initialization) *gin.Engine {
 		{
 			auth.POST("/register", rate_limiter.RateLimiterMiddleware, init.UserController.Register)
 			auth.POST("/login", rate_limiter.RateLimiterMiddleware, init.UserController.Login)
+		}
+		events := api.Group("/events")
+		{
+			events.POST("", rate_limiter.RateLimiterMiddleware, middleware.AuthMiddleware(init.UserService), init.EventController.CreateEvent)
 		}
 	}
 
